<resources>
    <string name="app_name">Quiz App</string>

    <!-- User name -->
    <string name="name">Enter your name</string>

    <!-- Quiz text -->
    <string name="quiz_text">Test your knowledge</string>

    <!-- Questions -->
    <string name="question_1">1.Who painted the famous painting of Mona Lisa?</string>
    <string name="question_2">2.The number of bones in adult human are.....</string>
    <string name="question_3">3.Which two of these are not in europe?</string>
    <string name="question_4">4.Which two of these are insects?</string>
    <string name="question_5">5.What is the only continent that is also considered as a country?</string>
    <string name="question_6">6.What is the only city of the world that lies in two continents?</string>

    <!-- Question 1 answers -->
    <string name="q1_a1">Picasso</string>
    <string name="q1_a2">Leonardo da Vinci</string>
    <string name="q1_a3">Michelangelo</string>

    <!-- Question 2 answers -->
    <string name="q2_a1">206</string>
    <string name="q2_a2">270</string>
    <string name="q2_a3">314</string>

    <!-- Question 3 answers -->
    <string name="q3_a1">Budapest</string>
    <string name="q3_a2">Caracas</string>
    <string name="q3_a3">Atlanta</string>

    <!-- Question 4 answers -->
    <string name="q4_a1">Mosquito</string>
    <string name="q4_a2">Tick</string>
    <string name="q4_a3">Flea</string>

    <!-- Question 5 answer -->
    <string name="q5_hint">Write your answer here</string>
    <string name="q5EditText">Australia</string>

    <!-- Question 6 answer -->
    <string name="q6_hint">Write your answer here</string>
    <string name="q6EditText">Istanbul</string>

    <!-- Buttons -->
    <string name="S_button">Submit</string>
    <string name="R_button">Reset</string>
    <string name="share_button">Share</string>

    <!-- Display message -->
    <string name="message_1">Congratulations</string>
    <string name="message_2">you have answered all the questions</string>
    <string name="message_3">Well done</string>
    <string name="message_4">you have answered</string>
    <string name="message_5">out of 6</string>
    <string name="message_6">better luck next time</string>
    <string name="message_7">You are stupid</string>

    <!-- Fonts -->
    <string name="text_font">cursive</string>

    <!-- Dimensions -->
    <dimen name="text_font_size">25sp</dimen>
    <dimen name="button_font_size">20sp</dimen>
    <dimen name="text_view_padding">20dp</dimen>
    <dimen name="radioGroup_margin_left">10dp</dimen>
    <dimen name="radioGroup_margin_bottom">10dp</dimen>
    <dimen name="checkbox_margin_left">10dp</dimen>
    <dimen name="checkbox_margin_bottom">10dp</dimen>
    <dimen name="edit_text_padding">25dp</dimen>
    <dimen name="Linear_padding">30dp</dimen>
    <dimen name="edit_marginBottom">20dp</dimen>
</resources>
