<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/quiz" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/text_font"
                android:gravity="center"
                android:padding="@dimen/text_view_padding"
                android:text="@string/quiz_text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_font_size" />

            <EditText
                android:id="@+id/user_name"
                style="@style/EditTextStyle"
                android:hint="@string/name" />

            <TextView
                style="@style/QuestionsTextStyle"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/radioGroup_margin_bottom"
                android:layout_marginLeft="@dimen/radioGroup_margin_left">

                <RadioButton
                    android:id="@+id/q1_a1"
                    style="@style/RadioButtonsStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q1_a1" />

                <RadioButton
                    android:id="@+id/q1_a2"
                    style="@style/RadioButtonsStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q1_a2" />

                <RadioButton
                    android:id="@+id/q1_a3"
                    style="@style/RadioButtonsStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q1_a3" />
            </RadioGroup>

            <TextView
                style="@style/QuestionsTextStyle"
                android:text="@string/question_2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/radioGroup_margin_bottom"
                android:layout_marginLeft="@dimen/radioGroup_margin_left">

                <RadioButton
                    android:id="@+id/q2_a1"
                    style="@style/RadioButtonsStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q2_a1" />

                <RadioButton
                    android:id="@+id/q2_a2"
                    style="@style/RadioButtonsStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q2_a2" />

                <RadioButton
                    android:id="@+id/q2_a3"
                    style="@style/RadioButtonsStyle"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q2_a3" />
            </RadioGroup>

            <TextView
                style="@style/QuestionsTextStyle"
                android:text="@string/question_3" />

            <CheckBox
                android:id="@+id/q3_a1"
                style="@style/CheckBoxStyle"
                android:text="@string/q3_a1" />

            <CheckBox
                android:id="@+id/q3_a2"
                style="@style/CheckBoxStyle"
                android:text="@string/q3_a2" />

            <CheckBox
                android:id="@+id/q3_a3"
                style="@style/CheckBoxStyle"
                android:text="@string/q3_a3" />

            <TextView
                style="@style/QuestionsTextStyle"
                android:text="@string/question_4" />

            <CheckBox
                android:id="@+id/q4_a1"
                style="@style/CheckBoxStyle"
                android:text="@string/q4_a1" />

            <CheckBox
                android:id="@+id/q4_a2"
                style="@style/CheckBoxStyle"
                android:text="@string/q4_a2" />

            <CheckBox
                android:id="@+id/q4_a3"
                style="@style/CheckBoxStyle"
                android:text="@string/q4_a3" />

            <TextView
                style="@style/QuestionsTextStyle"
                android:text="@string/question_5" />

            <EditText
                android:id="@+id/q5_answer"
                style="@style/EditTextStyle"
                android:hint="@string/q5_hint" />

            <TextView
                style="@style/QuestionsTextStyle"
                android:text="@string/question_6" />

            <EditText
                android:id="@+id/q6_answer"
                style="@style/EditTextStyle"
                android:hint="@string/q6_hint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/Linear_padding">

                <Button
                    android:id="@+id/submit_button"
                    style="@style/ButtonsStyle"
                    android:onClick="submitScore"
                    android:text="@string/S_button" />

                <Button
                    android:id="@+id/reset_button"
                    style="@style/ButtonsStyle"
                    android:onClick="resetQuiz"
                    android:text="@string/R_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>